--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinite</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 <script defer src="./infinite.bundle.js"></script></head>
 <body>
     <button id="btn">click</button>
