--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 <script>
     document.getElementById("btn").onclick = function() {
-        window.infinite.init()
+        window.infinite.init("infinite")
     }
 </script>
 </html>
